<resources>
    <string name="app_name">SayUA</string>
    <string name="app_company">© 2016–2026 Artem Nagornyi</string>
    <string name="app_name_ua">Ukrainian Phrasebook</string>
    <string name="action_about">About this app</string>
    <string name="action_alphabet">Ukrainian Alphabet</string>
    <string name="action_favorite">Add to Favourites</string>
    <string name="action_buy_pro">Upgrade to Full Version</string>
    <string name="action_gender_lang">Male/Female Speech</string>
    <string name="action_language">Language</string>
    <string name="action_theme">Theme</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_about">About this app</string>
    <string name="title_alphabet">Alphabet</string>
    <string name="phrases_counter">%d phrases</string>
    <string name="empty_favourites_icon">Empty favourites</string>
    <string name="empty_favourites_title">No Favourites Yet</string>
    <string name="empty_favourites_message">Tap the heart icon on any phrase to add it to your favourites list</string>
    <string-array name="theme_selection">
        <item>Light</item>
        <item>Dark</item>
        <item>Automatic</item>
    </string-array>
    <string name="text_to_speech">Text to speech</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_all</item>
        <item>@string/nav_item_favourites</item>
        <item>@string/nav_item_greetings</item>
        <item>@string/nav_item_signs</item>
        <item>@string/nav_item_troubleshooting</item>
        <item>@string/nav_item_transportation</item>
        <item>@string/nav_item_directions</item>
        <item>@string/nav_item_hotel</item>
        <item>@string/nav_item_numbers</item>
        <item>@string/nav_item_time</item>
        <item>@string/nav_item_weekdays</item>
        <item>@string/nav_item_months</item>
        <item>@string/nav_item_colors</item>
        <item>@string/nav_item_common_words</item>
        <item>@string/nav_item_restaurant</item>
        <item>@string/nav_item_love</item>
        <item>@string/nav_item_shopping</item>
        <item>@string/nav_item_clothing</item>
        <item>@string/nav_item_drugstore</item>
        <item>@string/nav_item_driving</item>
        <item>@string/nav_item_bank</item>
    </string-array>
    <string name="nav_item_all">All Phrases</string>
    <string name="nav_item_favourites">Favourites</string>
    <string name="nav_item_greetings">Greetings</string>
    <string name="nav_item_signs">Signs</string>
    <string name="nav_item_troubleshooting">Troubleshooting</string>
    <string name="nav_item_transportation">Transportation</string>
    <string name="nav_item_directions">Directions</string>
    <string name="nav_item_restaurant">Restaurant</string>
    <string name="nav_item_hotel">Hotel</string>
    <string name="nav_item_numbers">Numbers</string>
    <string name="nav_item_time">Time</string>
    <string name="nav_item_weekdays">Weekdays</string>
    <string name="nav_item_months">Months</string>
    <string name="nav_item_colors">Colours</string>
    <string name="nav_item_common_words">Common Words</string>
    <string name="nav_item_love">Love Words</string>
    <string name="nav_item_shopping">Shopping</string>
    <string name="nav_item_clothing">Clothing</string>
    <string name="nav_item_drugstore">Pharmacy</string>
    <string name="nav_item_driving">Driving</string>
    <string name="nav_item_bank">Bank</string>
    <string name="title_all">All Phrases</string>
    <string name="title_greetings">Greetings</string>
    <string name="title_signs">Signs</string>
    <string name="title_troubleshooting">Troubleshooting</string>
    <string name="title_transportation">Transportation</string>
    <string name="title_directions">Directions</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_hotel">Hotel</string>
    <string name="title_numbers">Numbers</string>
    <string name="title_time">Time</string>
    <string name="title_weekdays">Weekdays</string>
    <string name="title_months">Months</string>
    <string name="title_colors">Colours</string>
    <string name="title_common_words">Common Words</string>
    <string name="title_love">Love Words</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_clothing">Clothing</string>
    <string name="title_drugstore">Pharmacy</string>
    <string name="title_driving">Driving</string>
    <string name="title_bank">Bank</string>
    <string-array name="gender_lang_selection">
        <item>Male speech</item>
        <item>Female speech</item>
    </string-array>
    <string name="alphabet_html">
    <![CDATA[
<h3>Ukrainian Alphabet Overview</h3>
<p>The Ukrainian alphabet consists of 33 letters based on the Cyrillic script.</p>

<h3>Vowels</h3>
<p>Ukrainian has 10 vowel letters:</p>

<h4>Basic Vowels (Hard)</h4>
<p><strong>А а</strong> /a/ like a in father</p>
<p><strong>Е е</strong> /e/ like e in bed</p>
<p><strong>И и</strong> /ɪ/ like i in bit</p>
<p><strong>О о</strong> /o/ like o in more</p>
<p><strong>У у</strong> /u/ like oo in boot</p>

<h4>Iotated Vowels (Soft)</h4>
<p><strong>Я я</strong> /ja/ like ya in yard</p>
<p><strong>Є є</strong> /je/ like ye in yes</p>
<p><strong>І і</strong> /i/ like ee in see</p>
<p><strong>Ї ї</strong> /ji/ like yi in yield</p>
<p><strong>Ю ю</strong> /ju/ like yu in yule</p>

<h3>Consonants</h3>

<h4>Stop Consonants</h4>
<p><strong>П п</strong> /p/ like p in park</p>
<p><strong>Б б</strong> /b/ like b in book</p>
<p><strong>Т т</strong> /t/ like t in top</p>
<p><strong>Д д</strong> /d/ like d in dog</p>
<p><strong>К к</strong> /k/ like k in kite</p>
<p><strong>Г г</strong> /ɦ/ voiced h sound</p>
<p><strong>Ґ ґ</strong> /g/ like g in go (rare)</p>

<h4>Fricative Consonants</h4>
<p><strong>Ф ф</strong> /f/ like f in fish</p>
<p><strong>В в</strong> /v/ or /w/ like v in voice</p>
<p><strong>С с</strong> /s/ like s in sun</p>
<p><strong>З з</strong> /z/ like z in zoo</p>
<p><strong>Ш ш</strong> /ʃ/ like sh in show</p>
<p><strong>Ж ж</strong> /ʒ/ like s in pleasure</p>
<p><strong>Х х</strong> /x/ like ch in loch</p>

<h4>Affricates</h4>
<p><strong>Ц ц</strong> /ts/ like ts in bits</p>
<p><strong>Ч ч</strong> /tʃ/ like ch in church</p>
<p><strong>Щ щ</strong> /ʃtʃ/ like shch</p>

<h4>Nasals and Liquids</h4>
<p><strong>М м</strong> /m/ like m in man</p>
<p><strong>Н н</strong> /n/ like n in no</p>
<p><strong>Л л</strong> /l/ like l in love</p>
<p><strong>Р р</strong> /r/ rolled r</p>
<p><strong>Й й</strong> /j/ like y in yes</p>

<h3>Special Characters</h3>
<p><strong>ь</strong> (soft sign) softens consonants</p>
<p>Apostrophe separates sounds</p>

<h3>Pronunciation Tips</h3>
<ul>
<li>Ukrainian uses dynamic stress</li>
<li>Vowels do not reduce in unstressed positions</li>
<li>Most consonants can be hard or soft</li>
<li>Words are pronounced as spelled</li>
</ul>
    ]]>
    </string>
    <string-array name="greetings">
        <item>n/Hello/До*брий де*нь</item>
        <item>n/Good morning/До*брого ра*нку</item>
        <item>n/Good evening/До*брий ве*чір</item>
        <item>n/Good night/На добра*ніч</item>
        <item>n/How are you?/Як спра*ви?</item>
        <item>n/I\'m fine, thank you/До*бре, дя*кую</item>
        <item>n/What is your name?/Як вас зва*ти?</item>
        <item>n/My name is …/Мене* звуть …</item>
        <item>n/Nice to meet you/Ду*же приє*мно познайо*митися</item>
        <item>n/Please/Будь ла*ска</item>
        <item>n/Here you go/Про*шу</item>
        <item>n/Thank you/Дя*кую</item>
        <item>n/Excuse me/Перепро*шую</item>
        <item>n/Sorry/Ви*бачте</item>
        <item>n/Goodbye/До поба*чення</item>
        <item>n/I don\'t speak Ukrainian/Я не гово*рю украї*нською</item>
        <item>n/I don\'t understand/Я не розумі*ю</item>
        <item>n/Do you speak Japanese?/Чи ви гово*рите япо*нською?</item>
        <item>n/Do you speak English?/Чи ви гово*рите англі*йською?</item>
        <item>n/Does anyone speak Japanese?/Чи хтось гово*рить япо*нською?</item>
        <item>n/Does anyone speak English?/Чи хтось гово*рить англі*йською?</item>
    </string-array>
    <string-array name="signs">
        <item>n/Open door/ВІДЧИ*НЕНО</item>
        <item>n/Closed/ЗАЧИ*НЕНО</item>
        <item>n/Entrance/ВХІД</item>
        <item>n/Exit/ВИ*ХІД</item>
        <item>n/Push/ВІД СЕ*БЕ</item>
        <item>n/Pull/ДО СЕ*БЕ</item>
        <item>n/Toilet/ТУАЛЕ*Т</item>
        <item>n/Men/ЧОЛОВІ*ЧИЙ</item>
        <item>n/Women/ЖІНО*ЧИЙ</item>
        <item>n/No entry/ПРОХІ*Д ЗАБОРО*НЕНИЙ</item>
    </string-array>
    <string-array name="troubleshooting">
        <item>n/Help!/Допоможі*ть!</item>
        <item>n/Be careful!/Обере*жно!</item>
        <item>n/Leave me alone!/Відчепі*ться від ме*не!</item>
        <item>n/Police!/Полі*ція!</item>
        <item>n/Where is the toilet?/Де туале*т?</item>
        <item>m/I\'m sick/Я захворі*в</item>
        <item>f/I\'m sick/Я захворі*ла</item>
        <item>n/My bag was stolen/У ме*не вкра*ли су*мку</item>
        <item>m/I lost my wallet/Я загуби*в гамане*ць</item>
        <item>f/I lost my wallet/Я загуби*ла гамане*ць</item>
        <item>m/I\'m injured/Я пора*нений</item>
        <item>f/I\'m injured/Я пора*нена</item>
        <item>n/Call a doctor, please/Ви*кличте лі*каря</item>
        <item>n/Can I use your phone?/Чи мо*жу я скориста*тися телефо*ном?</item>
    </string-array>
    <string-array name="transportation">
        <item>n/Minibus/маршру*тка</item>
        <item>n/Bus/авто*бус</item>
        <item>n/Train/по*їзд</item>
        <item>n/How much is a ticket to …?/Скі*льки ко*штує квито*к до …?</item>
        <item>n/One ticket to …, please/Будь ла*ска, один квито*к до …</item>
        <item>n/Where does this train go?/Куди* ї*де це*й по*їзд?</item>
        <item>n/Where does this bus go?/Куди* ї*де це*й авто*бус?</item>
        <item>n/Where does this train stop?/Де зупиня*ється це*й по*їзд?</item>
        <item>n/Where does this bus stop?/Де зупиня*ється це*й авто*бус?</item>
        <item>n/Does this metro train go downtown?/Чи цей поїзд метро* ї*де в це*нтр мі*ста?</item>
        <item>n/Does this bus go downtown?/Чи цей авто*бус ї*де в це*нтр мі*ста?</item>
        <item>n/Taxi!/Таксі*!</item>
        <item>n/To …, please/Будь ла*ска, до …</item>
        <item>n/How much does it cost to go to …?/Скі*льки ко*штує проїхати до …?</item>
    </string-array>
    <string-array name="directions">
        <item>n/Where is …?/Де знахо*диться …?</item>
        <item>n/Train station/вокза*л</item>
        <item>n/Bus stop/зупи*нка авто*буса</item>
        <item>n/Airport/аеропо*рт</item>
        <item>n/City centre/це*нтр мі*ста</item>
        <item>n/Hotel/готе*ль</item>
        <item>n/Embassy/посо*льство</item>
        <item>n/Consulate/ко*нсульство</item>
        <item>n/Japan/Япо*нія</item>
        <item>n/Ukraine/Украї*на</item>
        <item>n/Restaurant/рестора*н</item>
        <item>n/Bar/ба*р</item>
        <item>n/Road/доро*га</item>
        <item>n/Left/ліво*руч</item>
        <item>n/Right/право*руч</item>
        <item>n/Straight ahead/пря*мо</item>
        <item>n/Towards …/до …</item>
        <item>n/Behind …/за …</item>
        <item>n/In front of …/пе*ред …</item>
        <item>n/Intersection/перехре*стя</item>
        <item>n/North/пі*вніч</item>
        <item>n/South/пі*вдень</item>
        <item>n/East/схі*д</item>
        <item>n/West/за*хід</item>
    </string-array>
</resources>