<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_phrases"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:title="@string/nav_item_all" />

        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_border"
            android:title="@string/nav_item_favourites" />
    </group>

    <group android:id="@+id/nav_categories_group" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_greetings"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/nav_item_greetings" />

        <item
            android:id="@+id/nav_signs"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_item_signs" />

        <item
            android:id="@+id/nav_troubleshooting"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_item_troubleshooting" />

        <item
            android:id="@+id/nav_transportation"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/nav_item_transportation" />

        <item
            android:id="@+id/nav_directions"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_item_directions" />

        <item
            android:id="@+id/nav_hotel"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/nav_item_hotel" />

        <item
            android:id="@+id/nav_numbers"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_item_numbers" />

        <item
            android:id="@+id/nav_time"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_item_time" />

        <item
            android:id="@+id/nav_weekdays"
            android:icon="@android:drawable/ic_menu_week"
            android:title="@string/nav_item_weekdays" />

        <item
            android:id="@+id/nav_months"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/nav_item_months" />

        <item
            android:id="@+id/nav_colors"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_item_colors" />

        <item
            android:id="@+id/nav_common_words"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_item_common_words" />

        <item
            android:id="@+id/nav_restaurant"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_item_restaurant" />

        <item
            android:id="@+id/nav_love"
            android:icon="@drawable/ic_favorite_filled"
            android:title="@string/nav_item_love" />

        <item
            android:id="@+id/nav_shopping"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_item_shopping" />

        <item
            android:id="@+id/nav_clothing"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_item_clothing" />

        <item
            android:id="@+id/nav_drugstore"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/nav_item_drugstore" />

        <item
            android:id="@+id/nav_driving"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/nav_item_driving" />

        <item
            android:id="@+id/nav_bank"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/nav_item_bank" />
    </group>
</menu>
