<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_alphabet"
        android:title="@string/action_alphabet"
        android:orderInCategory="200"
        android:icon="@drawable/alphabet"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_language"
        android:title="@string/action_language"
        android:orderInCategory="250"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_gender_lang"
        android:title="@string/action_gender_lang"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="400"
        app:showAsAction="never" />
</menu>
